# L0-Json-Parser-Service

./: .gitignore  README.md
order-service/: Cargo.toml
order-service/src/: main.rs
order-service/tests/: get_order_results.json  target.list  test.rs
